--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,8 +2,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{.Site.Title}} | {{.Title}}</title>
-  <script src="/js/dmode.js"></script>
-  <link rel="stylesheet" href="/css/style.css" />
+  <script src="{{ $.Site.Home.Permalink }}/js/dmode.js"></script>
+  <link rel="stylesheet" href="{{ $.Site.Home.Permalink }}/css/style.css" />
   <style>
     .posts svg,
     article svg {
