--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,13 +1,11 @@
 <footer>
   <p>
-    <small>Inspired by Gatsby starter blog.</small>
-    <br />
     Developed with love by <a href="https://github.com/sharadcodes">sharadcodes</a>
     <br />
     &copy; {{ now.Format "2006"}}
   </p>
 </footer>
-<script src="/js/lbox.js"></script>
+<script src="{{ $.Site.Home.Permalink }}/js/lbox.js"></script>
 <script>
   dload()
 </script>
