--- a/layouts/partials/post_header.html
+++ b/layouts/partials/post_header.html
@@ -5,6 +5,6 @@
     </h1>
   </a>
   <div class="dmode">
-    <img src="{{ $.Site.Home.Permalink }}/icons/sun.svg" alt="" />
+    <img src="{{ $.Site.Home.Permalink }}icons/sun.svg" alt="" />
   </div>
 </header>
