--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,7 +5,7 @@
     &copy; {{ now.Format "2006"}}
   </p>
 </footer>
-<script src="{{ $.Site.Home.Permalink }}/js/lbox.js"></script>
+<script src="{{ $.Site.Home.Permalink }}js/lbox.js"></script>
 <script>
   dload()
 </script>
