--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,7 @@
     <h1>{{.Site.Title}}</h1>
   </a>
   <div class="dmode">
-    <img src="{{ $.Site.Home.Permalink }}/icons/sun.svg" alt="" />
+    <img src="{{ $.Site.Home.Permalink }}icons/sun.svg" alt="" />
   </div>
   <section>
     <img src="{{.Site.Data.author.imageurl}}" alt="{{.Site.Data.author.name}}"/>
