--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <p>
-    Developed with love by <a href="https://github.com/sharadcodes">sharadcodes</a>
+    Developed with love by <a href="https://github.com/{{.Site.Data.author.github}}">{{.Site.Data.author.name}}</a>
     <br />
     &copy; {{ now.Format "2006"}}
   </p>
